k8s-script/k8s-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - caasp.suse.ru
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: caasp.suse.ru
    http:
      paths:
        - path: /dashboard
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 443
